finished styling about.html

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <hr style="border-top: dashed 1px;" />
     
     <section class="sectionOne">
-      <div>
+      <div class="strategy">
         <img src="img/about-plan.png" alt="strategy">
         <h2>Strategy</h2>
         <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
